##########################
# Setup.py Configuration #
##########################
# Configuring setup()
[metadata]
name = REACHer
version = 0.1.0-dev
url = https://github.com/scolby33/REACHer
download_url = https://github.com/scolby33/REACHer/releases
author = Scott Colby
author_email = scolby33@gmail.com
maintainer = scolby33@gmail.com
maintainer_email = scolby33@gmail.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.7
license = MIT
description = Download an abstract from PubMed with its PMID, extract mentioned pathways with Reach, and save the output JSON.
long_description = file: README.rst
keywords =

[options]
install_requires =
    defusedxml
    requests
python_requires = >=3.7
tests_require =
    tox
py_modules = reacher
package_dir =
    = src
[options.entry_points]
console_scripts =
    reacher = reacher:main
[options.packages.find]
where = src
# configuring bdist_wheel
[bdist_wheel]
python-tag = py37
